--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
 }
 
 .addImage{
-  background-image: url(./Images/check.png);
+  background-image: url(Images/check.png);
   background-size: cover;
 }
 
